--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="src\UI\main_ui.cpp" />
     <ClCompile Include="src\UI\ui_equip.cpp" />
     <ClCompile Include="src\UI\ui_inventory.cpp" />
+    <ClCompile Include="src\UI\ui_keyconfig.cpp" />
     <ClCompile Include="src\UI\ui_manager.cpp" />
     <ClCompile Include="src\UI\ui_quests.cpp" />
     <ClCompile Include="src\UI\ui_skills.cpp" />
@@ -278,6 +279,7 @@
     <ClInclude Include="src\map\maprenderer.h" />
     <ClInclude Include="src\map\portal.h" />
     <ClInclude Include="src\map\tile.h" />
+    <ClInclude Include="src\NPC\dialog_manager.h" />
     <ClInclude Include="src\NPC\npc.h" />
     <ClInclude Include="src\NPC\npc_manager.h" />
     <ClInclude Include="src\physics\collisionable.h" />
@@ -295,6 +297,7 @@
     <ClInclude Include="src\UI\ui_basic\ui_tabs.h" />
     <ClInclude Include="src\UI\ui_equip.h" />
     <ClInclude Include="src\UI\ui_inventory.h" />
+    <ClInclude Include="src\UI\ui_keyconfig.h" />
     <ClInclude Include="src\UI\ui_manager.h" />
     <ClInclude Include="src\UI\ui_quests.h" />
     <ClInclude Include="src\UI\ui_skills.h" />
