--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utills\static_timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utills\timer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="handler.h">
@@ -40,6 +46,15 @@
     </ClInclude>
     <ClInclude Include="socket.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utills\a_timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utills\static_timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utills\timer.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
