--- a/Hiraeth/Hiraeth.vcxproj.filters
+++ b/Hiraeth/Hiraeth.vcxproj.filters
@@ -231,6 +231,12 @@
     <ClCompile Include="src\game\net_chars\net_char.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\network\client_handler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\basic\log.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\utils\fileutils.h">
@@ -546,6 +552,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\game\net_chars\net_char_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\basic\log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
