--- a/Serializer/Serializer.vcxproj.filters
+++ b/Serializer/Serializer.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="code_for_checks\job_data_check.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="code_for_checks\quest_data_check.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
