--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -77,12 +77,12 @@
     <LibraryPath>$(SolutionDir)Dependencies\FreeType\lib;$(SolutionDir)Dependencies\FreeImage\lib;$(SolutionDir)Dependencies\GLFW\lib-vc2015;$(SolutionDir)Dependencies\GLEW\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)Dependencies\FreeType\include;$(SolutionDir)Dependencies\Cereal\include;$(SolutionDir)Dependencies\FreeImage\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\libpq\include;$(SolutionDir)Dependencies\OTL\include;$(ProjectDir)\src;$(SolutionDir)\Dependencies\GLFW\include;$(SolutionDir)\Dependencies\GLEW\include;$(SolutionDir)\Dependencies\FreeType\include;$(SolutionDir)\Dependencies\FreeImage\include;$(SolutionDir)\Dependencies\Cereal\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)Dependencies\FreeType\lib;$(SolutionDir)Dependencies\FreeImage\lib;$(SolutionDir)Dependencies\GLFW\lib-vc2019_64;$(SolutionDir)Dependencies\GLEW\lib;$(SolutionDir)Dependencies\libpq\lib</LibraryPath>
+    <IncludePath>$(SolutionDir)Dependencies\FreeType\include;$(SolutionDir)Dependencies\Cereal\include;$(SolutionDir)Dependencies\FreeImage\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\OTL\include;$(ProjectDir)\src;$(SolutionDir)\Dependencies\GLFW\include;$(SolutionDir)\Dependencies\GLEW\include;$(SolutionDir)\Dependencies\FreeType\include;$(SolutionDir)\Dependencies\FreeImage\include;$(SolutionDir)\Dependencies\Cereal\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)Dependencies\FreeType\lib;$(SolutionDir)Dependencies\FreeImage\lib;$(SolutionDir)Dependencies\GLFW\lib-vc2019_64;$(SolutionDir)Dependencies\GLEW\lib</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LibraryPath>$(SolutionDir)Dependencies\FreeType\lib;$(SolutionDir)Dependencies\FreeImage\lib;$(SolutionDir)Dependencies\GLFW\lib-vc2019_64;$(SolutionDir)Dependencies\GLEW\lib;$(SolutionDir)Dependencies\libpq\lib</LibraryPath>
-    <IncludePath>$(SolutionDir)Dependencies\FreeType\include;$(SolutionDir)Dependencies\Cereal\include;$(SolutionDir)Dependencies\FreeImage\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\libpq\include;$(SolutionDir)Dependencies\OTL\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>$(SolutionDir)Dependencies\FreeType\lib;$(SolutionDir)Dependencies\FreeImage\lib;$(SolutionDir)Dependencies\GLFW\lib-vc2019_64;$(SolutionDir)Dependencies\GLEW\lib</LibraryPath>
+    <IncludePath>$(SolutionDir)Dependencies\FreeType\include;$(SolutionDir)Dependencies\Cereal\include;$(SolutionDir)Dependencies\FreeImage\include;$(SolutionDir)Dependencies\GLEW\include;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\OTL\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -113,7 +113,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>freetype_64.lib;glfw3.lib;glew64s.lib;opengl32.lib;FreeImage64.lib;libpq.lib;;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freetype_64.lib;glfw3.lib;glew64s.lib;opengl32.lib;FreeImage64.lib;;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>D:\Program Files (x86)\Windows Kits\10\Lib\10.0.15063.0\um\x64;D:\Program Files (x86)\Microsoft Visual Studio\VC\Tools\MSVC\14.13.26128\lib\onecore\x64;D:\Program Files (x86)\Windows Kits\10\Lib\10.0.15063.0\ucrt\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -152,7 +152,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>freetype_64.lib;glfw3.lib;glew64s.lib;opengl32.lib;FreeImage64.lib;libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freetype_64.lib;glfw3.lib;glew64s.lib;opengl32.lib;FreeImage64.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>D:\Program Files (x86)\Windows Kits\10\Lib\10.0.15063.0\um\x64;D:\Program Files (x86)\Microsoft Visual Studio\VC\Tools\MSVC\14.13.26128\lib\onecore\x64;D:\Program Files (x86)\Windows Kits\10\Lib\10.0.15063.0\ucrt\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
