--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="address.h" />
+    <ClInclude Include="db_client.h" />
     <ClInclude Include="handler.h" />
     <ClInclude Include="mob_manager.h" />
     <ClInclude Include="server.h" />
