--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="utills\timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="server_msgs_handling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="handler.h">
