--- a/NetworkLib/NetworkLib.vcxproj.filters
+++ b/NetworkLib/NetworkLib.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClInclude Include="net\srl_funcs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="net\net_msgs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
