--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="server_msgs_handling.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="socket_handler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="handler.h">
@@ -63,6 +66,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="db_client.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="socket_handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="map_holder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
