--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="socket_handler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="map_holder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="handler.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="map_holder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="item_funcs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
