--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;GLEW_STATIC;WIN64;_LIB;_CRT_NONSTDC_NO_DEPRECATE;HRTH_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..\Dependencies\FreeType\include;..\Dependencies\Cereal\include;..\Dependencies\FreeImage\include;..\Dependencies\GLEW\include;..\Dependencies\GLFW\include;..\Dependencies\Glad\include;..\SerializeLib;..\MathLib;..\NetworkLib;..\submodules\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;..\Dependencies\FreeType\include;..\Dependencies\Cereal\include;..\Dependencies\FreeImage\include;..\Dependencies\GLEW\include;..\Dependencies\GLFW\include;..\SerializeLib;..\MathLib;..\NetworkLib;..\submodules\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -97,7 +97,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;GLEW_STATIC;WIN64;_LIB;_CRT_NONSTDC_NO_DEPRECATE;HRTH_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..\Dependencies\FreeType\include;..\Dependencies\Cereal\include;..\Dependencies\FreeImage\include;..\Dependencies\GLEW\include;..\Dependencies\GLFW\include;..\Dependencies\Glad\include;..\SerializeLib;..\MathLib;..\NetworkLib;..\submodules\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;..\Dependencies\FreeType\include;..\Dependencies\Cereal\include;..\Dependencies\FreeImage\include;..\Dependencies\GLEW\include;..\Dependencies\GLFW\include;..\SerializeLib;..\MathLib;..\NetworkLib;..\submodules\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -119,7 +119,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS;GLEW_STATIC;WIN64;_LIB;_CRT_NONSTDC_NO_DEPRECATE;HRTH_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;..\Dependencies\FreeType\include;..\Dependencies\Cereal\include;..\Dependencies\FreeImage\include;..\Dependencies\GLEW\include;..\Dependencies\GLFW\include;..\Dependencies\Glad\include;..\SerializeLib;..\MathLib;..\NetworkLib;..\submodules\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;..\Dependencies\FreeType\include;..\Dependencies\Cereal\include;..\Dependencies\FreeImage\include;..\Dependencies\GLEW\include;..\Dependencies\GLFW\include;..\SerializeLib;..\MathLib;..\NetworkLib;..\submodules\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -336,9 +336,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Dependencies\GLFW\GLFW.vcxproj">
       <Project>{154B857C-0182-860D-AA6E-6C109684020F}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Dependencies\Glad\Glad.vcxproj">
-      <Project>{BDD6857C-A90D-870D-52FA-6C103E10030F}</Project>
     </ProjectReference>
     <ProjectReference Include="..\MathLib\MathLib.vcxproj">
       <Project>{86BBB515-F29A-34B1-FBB2-BF8767119B12}</Project>
